RESOLVED FIXED28265
Fix off-by-one result comparisons in media tests on Windows Debug builds
https://bugs.webkit.org/show_bug.cgi?id=28265
Summary Fix off-by-one result comparisons in media tests on Windows Debug builds
Adam Roben (:aroben)
Reported 2009-08-13 10:10:55 PDT
Created attachment 34755 [details] Patch v1 media/video-played.html seems always to time out in Windows Debug builds. A race condition between media/video-test.js's "hang" timer and DumpRenderTree's built-in "watchdog" timer was causing results for media/video-played.html to be printed twice, causing all future media tests to be compared to the previous test's results. The fix is to get rid of video-test.js's hang timer, since it is redundant given the existence of DRT's watchdog timer. Reviewed by NOBODY (OOPS!). Need a short description and bug URL (OOPS!) * media/video-test.js: Remove the hang timer, since DRT does the same thing. --- 2 files changed, 21 insertions(+), 8 deletions(-)
Attachments
Patch v1 (1.73 KB, patch)
2009-08-13 10:10 PDT, Adam Roben (:aroben)
no flags
Do a better fix inside DRT (5.40 KB, patch)
2009-08-13 10:41 PDT, Adam Roben (:aroben)
no flags
Mark Rowe (bdash)
Comment 1 2009-08-13 10:17:30 PDT
Comment on attachment 34755 [details] Patch v1 Is the result being printed twice a bug in DRT? How does that happen?
Adam Roben (:aroben)
Comment 2 2009-08-13 10:41:29 PDT
Created attachment 34758 [details] Do a better fix inside DRT
Adam Roben (:aroben)
Comment 3 2009-08-13 10:41:59 PDT
(In reply to comment #1) > (From update of attachment 34755 [details]) > Is the result being printed twice a bug in DRT? How does that happen? You're right, there is a bug in DRT. I've attached a new patch that fixes it.
Mark Rowe (bdash)
Comment 4 2009-08-13 10:42:54 PDT
Comment on attachment 34758 [details] Do a better fix inside DRT r=me
Adam Roben (:aroben)
Comment 5 2009-08-13 10:59:56 PDT
Comment on attachment 34758 [details] Do a better fix inside DRT Landed as r47213. http://trac.webkit.org/changeset/47213
Adam Roben (:aroben)
Comment 6 2009-08-13 11:00:18 PDT
Note You need to log in before you can comment on or make changes to this bug.